attempt to fix spacing issue

--- a/app/modules/hamburger/assets/sass/_hamburger.scss
+++ b/app/modules/hamburger/assets/sass/_hamburger.scss
@@ -101,9 +101,7 @@
   }
 
   &.hamburger-auto {
-    .main-content {
-      margin-top: 30px;
-    }
+
     .navmenu .list-group {
       margin-top: 60px;
     }
@@ -112,9 +110,7 @@
     .footer-wrapper {
       z-index: 5000;
     }
-    .main-content {
-      margin-top: 80px;
-    }
+
     .navmenu .list-group {
       margin-top: 21px;
       .main-content {
